<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Chat Application</string>
    <string name="start_new_chat">Start new chat</string>
    <string name="add_new_contact">Add new contact</string>
    <string name="new_chat">New chat</string>
    <string name="attach_file">Attach File</string>
    <string name="type_message">Type a message…</string>
    <string name="record_audio">Record Audio</string>
    <string name="record_video">Record Video</string>
    <string name="send_message">Send Message</string>
    <string name="slide_to_cancel">Slide to cancel</string>

</resources>
